@@ -41,6 +41,8 @@ typedef Tilesets::iterator TilesetIterator;
 typedef std::list<Sprite*> Sprites;
 typedef Sprites::iterator SpriteIterator;
 
+extern volatile int tick_time;
+
 /**
  * A meta tile stores additional information about a location on a tile map.
  * This is information that doesn't need to be repeated for each tile in each
